--- a/src/Agent.PostSharp.3.0.NET45/packages.config
+++ b/src/Agent.PostSharp.3.0.NET45/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Gibraltar.Agent" version="3.7.0.2102" targetFramework="net45" />
+  <package id="Gibraltar.Agent" version="3.8.1.2710-beta" targetFramework="net45" />
   <package id="PostSharp" version="3.0.42" targetFramework="net45" />
 </packages>
