Updated to Loupe 4.0 release.

--- a/src/Agent.PostSharp.3.0.NET40/Gibraltar.Agent.PostSharp.3.0.nuspec
+++ b/src/Agent.PostSharp.3.0.NET40/Gibraltar.Agent.PostSharp.3.0.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>Gibraltar.Agent.PostSharp.3.0</id>
-    <version>$version$-beta</version>
+    <version>$version$</version>
     <title>Loupe Agent for PostSharp 3.0</title>
     <authors>Gibraltar Software</authors>
     <owners>Gibraltar Software</owners>
