--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ TestResults
 *.suo
 *.user
 *.sln.docstates
+.vs
 
 # Build results
 [Dd]ebug/
@@ -36,6 +37,9 @@ x64/
 *.vspscc
 *.vssscc
 .builds
+
+# Visual Studio 2015 cache/options directory
+.vs/
 
 # Visual C++ cache files
 ipch/
