--- a/src/Agent.PostSharp.3.0.NET40/Agent.PostSharp.3.0.NET40.csproj
+++ b/src/Agent.PostSharp.3.0.NET40/Agent.PostSharp.3.0.NET40.csproj
@@ -11,7 +11,8 @@
     <AssemblyName>Gibraltar.Agent.PostSharp.3.0.NET40</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SignAssembly>false</SignAssembly>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\..\loupe.agent.snk</AssemblyOriginatorKeyFile>
     <SccProjectName>SAK</SccProjectName>
     <SccLocalPath>SAK</SccLocalPath>
     <SccAuxPath>SAK</SccAuxPath>
@@ -62,6 +63,7 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="Gibraltar.Agent.PostSharp.3.0.nuspec" />
+    <None Include="loupe.agent.snk" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="..\Agent.PostSharp\Agent.PostSharp.projitems" Label="Shared" />
