--- a/src/Agent.PostSharp.6.0.NET45/Agent.PostSharp.6.0.NET45.csproj
+++ b/src/Agent.PostSharp.6.0.NET45/Agent.PostSharp.6.0.NET45.csproj
@@ -12,7 +12,8 @@
     <AssemblyName>Gibraltar.Agent.PostSharp.6.0.NET45</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SignAssembly>false</SignAssembly>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\..\loupe.agent.snk</AssemblyOriginatorKeyFile>
     <SccProjectName>SAK</SccProjectName>
     <SccLocalPath>SAK</SccLocalPath>
     <SccAuxPath>SAK</SccAuxPath>
