--- a/src/Agent.PostSharp.Test/app.config
+++ b/src/Agent.PostSharp.Test/app.config
@@ -1,18 +1,18 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <sectionGroup name="gibraltar">
-      <section name="listener" type="Gibraltar.Agent.ListenerElement, Gibraltar.Agent" />
-      <section name="packager" type="Gibraltar.Agent.PackagerElement, Gibraltar.Agent" />
-      <section name="publisher" type="Gibraltar.Agent.PublisherElement, Gibraltar.Agent" />
-      <section name="sessionFile" type="Gibraltar.Agent.SessionFileElement, Gibraltar.Agent" />
-      <section name="exportFile" type="Gibraltar.Agent.ExportFileElement, Gibraltar.Agent" />
-      <section name="viewer" type="Gibraltar.Agent.ViewerElement, Gibraltar.Agent" />
-      <section name="email" type="Gibraltar.Agent.EmailElement, Gibraltar.Agent" />
-      <section name="server" type="Gibraltar.Agent.ServerElement, Gibraltar.Agent" />
-      <section name="autoSendConsent" type="Gibraltar.Agent.AutoSendConsentElement, Gibraltar.Agent" />
-      <section name="networkViewer" type="Gibraltar.Agent.NetworkViewerElement, Gibraltar.Agent" />
-      <section name="properties" type="System.Configuration.NameValueSectionHandler" />
+      <section name="listener" type="Gibraltar.Agent.ListenerElement, Gibraltar.Agent"/>
+      <section name="packager" type="Gibraltar.Agent.PackagerElement, Gibraltar.Agent"/>
+      <section name="publisher" type="Gibraltar.Agent.PublisherElement, Gibraltar.Agent"/>
+      <section name="sessionFile" type="Gibraltar.Agent.SessionFileElement, Gibraltar.Agent"/>
+      <section name="exportFile" type="Gibraltar.Agent.ExportFileElement, Gibraltar.Agent"/>
+      <section name="viewer" type="Gibraltar.Agent.ViewerElement, Gibraltar.Agent"/>
+      <section name="email" type="Gibraltar.Agent.EmailElement, Gibraltar.Agent"/>
+      <section name="server" type="Gibraltar.Agent.ServerElement, Gibraltar.Agent"/>
+      <section name="autoSendConsent" type="Gibraltar.Agent.AutoSendConsentElement, Gibraltar.Agent"/>
+      <section name="networkViewer" type="Gibraltar.Agent.NetworkViewerElement, Gibraltar.Agent"/>
+      <section name="properties" type="System.Configuration.NameValueSectionHandler"/>
     </sectionGroup>
   </configSections>
   
@@ -29,4 +29,4 @@
 For information on config options and common scenarios see
 http://www.gibraltarsoftware.com/Support/Loupe/Documentation/WebFrame.html#DevelopersReference_AgentConfiguration_CommonScenarios.html
     -->
-  </gibraltar></configuration>
+  </gibraltar><startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
