--- a/src/Agent.PostSharp.Test/packages.config
+++ b/src/Agent.PostSharp.Test/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Gibraltar.Agent" version="4.8.1" targetFramework="net40-client" />
-  <package id="PostSharp" version="3.0.42" targetFramework="net40-Client" />
+  <package id="PostSharp" version="6.0.18" targetFramework="net45" />
+  <package id="PostSharp.Redist" version="6.0.18" targetFramework="net45" />
 </packages>
